--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -18,7 +18,7 @@
 % Beginn der Präsentation
 
 \title{Vorstellung Compiler - Gruppe 3}
-\subtitle{Compiler-Praktikum WS21/22}
+\subtitle{Compilerpraktikum WS21/22}
 \author[Nikolai, Pascal, Lars, Niklas]{Nikolai Maas, Pascal Mehnert, Lars König, Niklas Betten}
 
 \date[10.\,2.\,2022]{10. Februar 2022}
