--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -338,6 +338,36 @@
 \end{frame}
 
 \begin{frame}
+\frametitle{Register Allocator - Register Assignment}
+
+\begin{columns}
+	\begin{column}{0.65\textwidth}
+		\begin{itemize}
+			\item \textbf{Input:} linearized blocks and lifetimes
+			\item Assign virtual registers to hardware register or stack slot
+			\item Linear scan over blocks, select best assignment greedily
+			\item Spill decision based on loop depth and lifetime 
+			\begin{itemize}
+				\item Always spill for entire lifetime
+			\end{itemize}
+			\item Considerations when assigning a register:
+			\begin{itemize}
+				\item Reuse input register if possible
+				\item Reduce and/or eliminate moves
+				\item Callee-saved register in case of interfering calls
+				\item According register for function arguments and return value
+			\end{itemize}
+			\item \textbf{Output:} register assignment
+		\end{itemize}
+	\end{column}
+	
+	\begin{column}{0.35\textwidth}
+		\centering \includegraphics[scale=0.7]{images/allocation.pdf}
+	\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}
     \frametitle{Register Allocator}
 
     \begin{itemize}
