register allocation techniques

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -272,11 +272,38 @@
 \begin{frame}
     \frametitle{Register Allocation - Techniques}
 
-    \begin{itemize}
-    	\item Blockwise
-        \item Linear Scan
-        \item Graph Coloring
-    \end{itemize}
+	\begin{columns}
+		\begin{column}{0.65\textwidth}
+		    \begin{contentblock}{Blockwise Allocation}
+		    	\begin{itemize}
+		    		\item Load at beginning and spill at end of each block
+		    		\item Use free-list to manage registers, greedy allocation
+		    	\end{itemize}
+		    \end{contentblock}
+	
+			\begin{contentblock}{Linear Scan}
+				\begin{itemize}
+					\item Linear block ordering
+					\item Scan through all blocks, greedy allocation
+					\item Good results in practice
+				\end{itemize}
+			\end{contentblock}
+	
+			\begin{contentblock}{Graph Coloring}
+				\begin{itemize}
+					\item Construct register interference graph
+					\item Coloring corresponds to register assignment
+					\item Best results, but high complexity
+				\end{itemize}
+			\end{contentblock}
+		\end{column}
+
+		\begin{column}{0.35\textwidth}
+			\vspace{40pt}
+			\vfill
+			\centering \includegraphics[scale=0.7]{images/techniques.pdf}
+		\end{column}
+	\end{columns}
 
 \end{frame}
 
